# flake_templates

./: flake.nix
haskell-project/: flake.nix  rename-me.cabal
haskell-project/app/: Main.hs
haskell-project/nix/: hix.nix
haskell-project/src/: Lib.hs
haskell-project/tests/: Main.hs
